[FIX] web: improve field border contrast in dark mode (sm screens)
Previously, required and optional fields had no visible difference
in dark mode on small screens, making the UI unclear in dark mode.

This commit updates the border color to use `$o-form-lightsecondary`,
which adapts to both light and dark themes, ensuring better contrast
and clearer distinction between field states.

follow-up of https://github.com/odoo/odoo/pull/260130

--- a/addons/web/static/src/views/form/form_controller_m3.scss
+++ b/addons/web/static/src/views/form/form_controller_m3.scss
@@ -3,7 +3,7 @@
 .o_form_view {
     @include media-breakpoint-down(md) {
         --field-spacing-unit: 8px;
-        --o-field-box-border-color: var(--gray-200);
+        --o-field-box-border-color: var(--o-input-border-color);
 
         %-o-field-box {
             border-radius: calc(.5 * var(--field-spacing-unit));
@@ -34,7 +34,7 @@
                 }
             }
             &:has(.o_field_widget.o_readonly_modifier):not(:has(.o_field_widget:not(.o_readonly_modifier))) {
-                --o-field-box-border-color: var(--gray-200);
+                --o-field-box-border-color: var(--o-input-border-color);
                 background: rgba($body-color, .04);
             }
         }
@@ -117,7 +117,6 @@
                 display: contents;
 
                 .o_property_field_value {
-                    @include print-variable(o-input-border-color, $o-form-lightsecondary);
                     @extend %-o-field-box;
                     margin-bottom: map-get($spacers, 3);
                 }
